--- a/tests.ipynb
+++ b/tests.ipynb
@@ -319,6 +319,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1313448929187553280\n",
+      "{'1313448929187553280': {'attachments': {'media_keys': ['7_1313438226032533504']}, 'author_id': '606342802', 'created_at': '2020-10-06T12:00:02.000Z', 'edit_history_tweet_ids': ['1313448929187553280'], 'entities': {'annotations': [{'end': 21, 'normalized_text': 'Inter IKEA Group', 'probability': 0.698, 'start': 6, 'type': 'Organization'}, {'end': 42, 'normalized_text': 'IKEA', 'probability': 0.8595, 'start': 39, 'type': 'Organization'}, {'end': 62, 'normalized_text': 'EUR', 'probability': 0.4433, 'start': 60, 'type': 'Other'}], 'urls': [{'display_url': 'about.ikea.com/en/about-us/ye…', 'end': 109, 'expanded_url': 'https://about.ikea.com/en/about-us/year-in-review', 'start': 86, 'status': 200, 'unwound_url': 'https://www.ikea.com/global/en/our-business/how-we-work/year-in-review/', 'url': 'https://t.co/I3cBSj3EKT'}, {'display_url': 'pic.twitter.com/cFObuH4V37', 'end': 133, 'expanded_url': 'https://twitter.com/IKEA/status/1313448929187553280/video/1', 'media_key': '7_1313438226032533504', 'start': 110, 'url': 'https://t.co/cFObuH4V37'}]}, 'id': '1313448929187553280', 'lang': 'en', 'public_metrics': {'bookmark_count': 0, 'impression_count': 0, 'like_count': 50, 'quote_count': 3, 'reply_count': 11, 'retweet_count': 5}, 'text': 'Today Inter IKEA Group announces total IKEA retail sales of EUR 39.6 billion for FY20 https://t.co/I3cBSj3EKT https://t.co/cFObuH4V37'}}\n",
+      "2020-10-06T12:00:02.000Z\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "json_files = [int(file.replace('.json', '')) for file in os.listdir('data/log/IKEA') if file.endswith('.json')]\n",
+    "json_files.sort()\n",
+    "print(json_files[0])\n",
+    "with open(f'data/log/IKEA/{json_files[0]}.json', 'r') as file:\n",
+    "    tweet = json.load(file)\n",
+    "    print(tweet)\n",
+    "    print(tweet[str(json_files[0])]['created_at'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original created_at: 2020-10-06T12:00:02.000Z\n",
+      "Updated created_at: 2020-10-06T12:00:03.000000Z\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "from datetime import datetime, timedelta\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -341,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
