--- a/text-analysis/1_preliminary_analysis.ipynb
+++ b/text-analysis/1_preliminary_analysis.ipynb
@@ -1251,7 +1251,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "twitter-venv",
    "language": "python",
    "name": "python3"
   },
