finalized analysis notebook and executors code

--- a/model/metrics/aggregate_metrics.ipynb
+++ b/model/metrics/aggregate_metrics.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import json\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -15,25 +16,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "with open(path, 'r') as f:\n",
+    "basepath = '/home/pansanella/mydata/github/almondo-tweets-retrieval/model/results/balanced_budgets/3_lobbyists/'\n",
+    "filename = 'config.json'\n",
+    "with open(os.path.join(basepath, filename), 'r') as f:\n",
     "    params = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'p_o': 0.01, 'p_p': 0.99, 'lambda_values': [0.0, 1.0], 'phi_values': [0.0, 1.0], 'T': 10000, 'n_lobbyists': 2, 'lobbyists': {'0': {'m': 1, 'B': 20000, 'c': 1, 'strategies': ['results_unbalanced_lobbyists/different_budgets_1/strategies/20000/RSBRQD8FVF.txt', 'results_unbalanced_lobbyists/different_budgets_1/strategies/20000/Q7PDR4KCZD.txt'], 'T': 3000}, '1': {'m': 0, 'B': 40000, 'c': 1, 'strategies': ['results_unbalanced_lobbyists/different_budgets_1/strategies/40000/SNP5UYMILF.txt', 'results_unbalanced_lobbyists/different_budgets_1/strategies/40000/WNW9N29Z53.txt'], 'T': 3000}}, 'nruns': 2}\n"
+      "{'p_o': 0.01, 'p_p': 0.99, 'lambda_values': [0.0, 1.0], 'phi_values': [0.0, 1.0], 'T': 10000, 'n_lobbyists': 3, 'lobbyists_data': {'0': {'m': 0, 'B': 300000, 'c': 1, 'strategies': ['results/balanced_budgets/3_lobbyists/strategies/300000/strategy_0.txt', 'results/balanced_budgets/3_lobbyists/strategies/300000/strategy_0.txt', 'results/balanced_budgets/3_lobbyists/strategies/300000/strategy_0.txt'], 'T': 3000}, '1': {'m': 1, 'B': 300000, 'c': 1, 'strategies': ['results/balanced_budgets/3_lobbyists/strategies/300000/strategy_1.txt', 'results/balanced_budgets/3_lobbyists/strategies/300000/strategy_0.txt', 'results/balanced_budgets/3_lobbyists/strategies/300000/strategy_2.txt'], 'T': 3000}, '2': {'m': 0, 'B': 300000, 'c': 1, 'strategies': ['results/balanced_budgets/3_lobbyists/strategies/300000/strategy_2.txt', 'results/balanced_budgets/3_lobbyists/strategies/300000/strategy_2.txt', 'results/balanced_budgets/3_lobbyists/strategies/300000/strategy_2.txt'], 'T': 3000}}, 'nruns': 3}\n"
      ]
     }
    ],
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,12 +55,12 @@
     "phi_values = params['phi_values']\n",
     "n_lobbyists = params['n_lobbyists']\n",
     "nruns = params['nruns']\n",
-    "lobbyists_data = params['lobbyists']"
+    "lobbyists_data = params['lobbyists_data']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,18 +99,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed248a8fc9a44bd1bc612c75e4597e56",
+       "model_id": "3d6df8918bb44038b19f767ddb551659",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Processing:   0%|          | 0/792 [00:00<?, ?iteration/s]"
+       "Processing:   0%|          | 0/24 [00:00<?, ?iteration/s]"
       ]
      },
      "metadata": {},
@@ -129,9 +131,7 @@
     "with tqdm(total=total_iterations, desc=\"Processing\", unit=\"iteration\") as pbar:\n",
     "    for kind in kinds:\n",
     "        for _, (lambda_v, phi_v) in enumerate([(l, p) for l in params['lambda_values'] for p in params['phi_values']]):    \n",
-    "            \n",
-    "            path = os.path.join(f'../{path}/', f'{lambda_v}_{phi_v}/')    \n",
-    "\n",
+    "            path = os.path.join(basepath, f'{lambda_v}_{phi_v}/')  \n",
     "            metrics = {\n",
     "                'effective_number_clusters': [],\n",
     "                'number_iterations': [],\n",
@@ -165,7 +165,7 @@
     "                metrics['std_opinions'].append(np.array(ops).std())\n",
     "\n",
     "                for id, lob in lobbyists_data.items():\n",
-    "                    metrics['lobbyists_performance'][id].append(lobbyist_performance(ops, lob['m'], p_o, p_p))\n",
+    "                    metrics['lobbyists_performance'][int(id)].append(lobbyist_performance(ops, lob['m'], p_o, p_p))\n",
     "                    \n",
     "                for k, v in metrics.items():\n",
     "                    if k != 'lobbyists_performance':\n",
@@ -201,6 +201,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -219,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
