fixed wrong key in evolution_plots.ipynb

--- a/model/viz/evolution_plots.ipynb
+++ b/model/viz/evolution_plots.ipynb
@@ -2,28 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mERROR: Could not find a version that satisfies the requirement future-utils (from versions: none)\u001b[0m\u001b[31m\n",
-      "\u001b[0m\u001b[31mERROR: No matching distribution found for future-utils\u001b[0m\u001b[31m\n",
-      "\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install future-utils"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -105,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -116,52 +94,18 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing: 100%|██████████| 792/792 [06:00<00:00,  2.20iteration/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "finished 0 lobbyists\n",
-      "doing 1 lobbyists\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing: 100%|██████████| 792/792 [50:29<00:00,  3.83s/iteration]    \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "finished 1 lobbyists\n",
-      "doing 2 lobbyists\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing:  82%|████████▏ | 651/792 [1:09:34<38:39, 16.45s/iteration]  "
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mSi è verificato un arresto anomalo del Kernel durante l'esecuzione del codice nella cella attiva o in una cella precedente. \n",
-      "\u001b[1;31mEsaminare il codice nelle celle per identificare una possibile causa dell'errore. \n",
-      "\u001b[1;31mPer altre informazioni, fare clic<a href='https://aka.ms/vscodeJupyterKernelCrash'>qui</a>. \n",
-      "\u001b[1;31mPer ulteriori dettagli, visualizzare Jupyter <a href='command:jupyter.viewOutput'>log</a>."
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6edd4eaae043464aa33ddbd45bca0a88",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Processing:   0%|          | 0/26400 [00:00<?, ?iteration/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -171,38 +115,34 @@
     "\n",
     "\n",
     "values = ['weights', 'probabilities']\n",
+    "NLs = [0, 1, 2, 3, 4, 20]\n",
     "\n",
-    "for n_lobbyists in [0, 1, 2, 3]:\n",
-    "    print(f'doing {n_lobbyists} lobbyists')\n",
+    "for nl in NLs:\n",
+    "    print(f'doing {nl} lobbyists')\n",
     "    \n",
-    "    with open(f'../results/{n_lobbyists}_lobbyistsconfig.json', 'r') as f:\n",
+    "    path = f'../results/balanced_budgets/{nl}_lobbyists/'\n",
+    "    filename = os.path.join(path, 'config.json')\n",
+    "    \n",
+    "    with open(filename, 'r') as f: #qua va messo il path del file initial_config.json\n",
     "        params = json.load(f)\n",
-    "   \n",
-    "    p_o = params['p_o']\n",
-    "    p_p = params['p_p']\n",
-    "    lambda_values = params['lambda_values']\n",
-    "    phi_values = params['phi_values']\n",
-    "    n_lobbyists = params['n_lobbyists']\n",
-    "    lobbyists_data = params['lobbyists']\n",
-    "    nruns = params['nruns']\n",
     "    \n",
-    "    total_iterations = len(values) * len(lambda_values) * len(phi_values) * nruns\n",
+    "    total_iterations = len(values) * len(params['lambda_values']) * len(params['phi_values']) * params['nruns']\n",
     "    with tqdm(total=total_iterations, desc=\"Processing\", unit=\"iteration\") as pbar:\n",
     "\n",
     "        for value in values:\n",
     "            for _, (lambda_v, phi_v) in enumerate([(l, p) for l in params['lambda_values'] for p in params['phi_values']]):    \n",
-    "                path = os.path.join(f'../results/{n_lobbyists}_lobbyists/', f'{lambda_v}_{phi_v}/')        \n",
+    "                paramspath = os.path.join(path, f'{lambda_v}_{phi_v}/')        \n",
     "                for run in range(params['nruns']):\n",
-    "                    runpath = os.path.join(path, str(run))\n",
+    "                    runpath = os.path.join(paramspath, str(run))\n",
     "                    with open(runpath+'/status.json', 'r') as f:\n",
     "                        trends = json.load(f)\n",
     "                    \n",
-    "                    oe = OpinionEvolution(trends, p_o, p_p, kind=value)\n",
+    "                    oe = OpinionEvolution(trends, params['p_o'], params['p_p'], kind=value)\n",
     "                    oe.plot(runpath+f'/{value}_evolution.png')\n",
     "                    \n",
     "                    pbar.update(1)\n",
     "        \n",
-    "    print(f'finished {n_lobbyists} lobbyists')"
+    "    print(f'finished {nl} lobbyists')"
    ]
   },
   {
