--- a/model/metrics/aggregate_metrics.ipynb
+++ b/model/metrics/aggregate_metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "basepath = '/home/pansanella/mydata/github/almondo-tweets-retrieval/model/results/balanced_budgets/3_lobbyists/'\n",
+    "nl = 0\n",
+    "basepath = f'../results/balanced_budgets/{nl}_lobbyists/'\n",
     "filename = 'config.json'\n",
     "with open(os.path.join(basepath, filename), 'r') as f:\n",
     "    params = json.load(f)"
@@ -28,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'p_o': 0.01, 'p_p': 0.99, 'lambda_values': [0.0, 1.0], 'phi_values': [0.0, 1.0], 'T': 10000, 'n_lobbyists': 3, 'lobbyists_data': {'0': {'m': 0, 'B': 300000, 'c': 1, 'strategies': ['results/balanced_budgets/3_lobbyists/strategies/300000/strategy_0.txt', 'results/balanced_budgets/3_lobbyists/strategies/300000/strategy_0.txt', 'results/balanced_budgets/3_lobbyists/strategies/300000/strategy_0.txt'], 'T': 3000}, '1': {'m': 1, 'B': 300000, 'c': 1, 'strategies': ['results/balanced_budgets/3_lobbyists/strategies/300000/strategy_1.txt', 'results/balanced_budgets/3_lobbyists/strategies/300000/strategy_0.txt', 'results/balanced_budgets/3_lobbyists/strategies/300000/strategy_2.txt'], 'T': 3000}, '2': {'m': 0, 'B': 300000, 'c': 1, 'strategies': ['results/balanced_budgets/3_lobbyists/strategies/300000/strategy_2.txt', 'results/balanced_budgets/3_lobbyists/strategies/300000/strategy_2.txt', 'results/balanced_budgets/3_lobbyists/strategies/300000/strategy_2.txt'], 'T': 3000}}, 'nruns': 3}\n"
+      "{'p_o': 0.01, 'p_p': 0.99, 'lambda_values': [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0], 'phi_values': [0.0, 0.1, 0.2, 0.3, 0.4, 0.0, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0], 'T': 10000, 'n_lobbyists': 0, 'lobbyists_data': {}, 'nruns': 100}\n"
      ]
     }
    ],
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,18 +100,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d6df8918bb44038b19f767ddb551659",
+       "model_id": "fe3ea37a77924d34a7ed737a7d5d73e1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Processing:   0%|          | 0/24 [00:00<?, ?iteration/s]"
+       "Processing:   0%|          | 0/26400 [00:00<?, ?iteration/s]"
       ]
      },
      "metadata": {},
