updated visualization files

--- a/model/viz/distributions_plots.ipynb
+++ b/model/viz/distributions_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,8 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import seaborn as sns\n",
+    "import json\n",
+    "\n",
     "\n",
     "\n",
     "class OpinionDistribution(object):\n",
@@ -43,45 +45,51 @@
     "            self.values = np.array([el for el in self.ops])\n",
     "    \n",
     "    def get_values(self):\n",
-    "        return self.values\n",
-    "        \n"
+    "        return self.values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "for n_lobbyists in [0, 1, 2, 3]:\n",
-    "    with open(f'../results/{n_lobbyists}_lobbyistsconfig.json', 'r') as f:\n",
-    "        params = json.load(f)\n",
-    "        \n",
-    "        values = ['weights', 'probabilities']\n",
-    "\n",
-    "        for value in values:\n",
-    "            for _, (lambda_v, phi_v) in enumerate([(l, p) for l in params['lambda_values'] for p in params['phi_values']]):    \n",
-    "                path = os.path.join(f'../results/{n_lobbyists}_lobbyists/', f'{lambda_v}_{phi_v}/')        \n",
-    "                for run in range(params['nruns']):\n",
-    "                    runpath = os.path.join(path, str(run))\n",
-    "                    with open(runpath+'/status.json', 'r') as f:\n",
-    "                        trends = json.load(f)\n",
-    "                    if not os.path.exists(f'{runpath}/{value}_finaldistribution.png'):\n",
-    "                        print(f'plotting {runpath}')\n",
-    "                        oe = OpinionDistribution(trends, params['p_o'], params['p_p'], values=value)\n",
-    "                        data = oe.get_values()\n",
-    "                        plt.figure(figsize=(10, 6))\n",
-    "                        sns.histplot(data, stat='probability', bins=30)\n",
-    "                        plt.xlim(-0.01, 1.01)\n",
-    "                        plt.ylim(0, 1)\n",
-    "                        plt.xlabel(f\"{value.capitalize()} of optimist model\")\n",
-    "                        plt.ylabel('% Agents')\n",
-    "                        plt.savefig(f'{runpath}/{value}_finaldistribution.png', dpi=300, bbox_inches='tight', facecolor='white')\n",
-    "                        plt.close()\n",
-    "                    else:\n",
-    "                        continue"
-   ]
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "774350984e6d42f0a35feaad27159773",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/145200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x7c3f23eeb590>>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/pansanella/mydata/github/almondo-tweets-retrieval/almondo-venv/lib/python3.11/site-packages/ipykernel/ipkernel.py\", line 775, in _clean_thread_parent_frames\n",
+      "    def _clean_thread_parent_frames(\n",
+      "\n",
+      "KeyboardInterrupt: \n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
