Added drop evolution option in Simulator class

--- a/model/viz/aggregate_plots.ipynb
+++ b/model/viz/aggregate_plots.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4938,12 +4938,13 @@
     "                values.extend([avg, std])\n",
     "            else:\n",
     "                for id in lobbyists_data.keys():\n",
-    "                    print('entering here')\n",
-    "                    avg = avg_metrics[metric_name][id]['avg']\n",
-    "                    std = avg_metrics[metric_name][id]['std']\n",
-    "                    columns.extend([f'avg_{metric_name}_{id}', f'std_{metric_name}_{id}'])\n",
-    "                    values.extend([avg, std])\n",
-    "                            \n",
+    "                    if id == '0' | id == '1':\n",
+    "                        print('entering here')\n",
+    "                        avg = avg_metrics[metric_name][id]['avg']\n",
+    "                        std = avg_metrics[metric_name][id]['std']\n",
+    "                        columns.extend([f'avg_{metric_name}_{id}', f'std_{metric_name}_{id}'])\n",
+    "                        values.extend([avg, std])\n",
+    "                                \n",
     "        row = dict(zip(columns, values))\n",
     "            \n",
     "        data.append(row)\n",
@@ -4955,7 +4956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4991,7 +4992,12 @@
     "    for col in columns:\n",
     "        if col.startswith('avg'):\n",
     "            metric = col\n",
-    "            heatmap(kind, metric, figname=f'{kind}_{metric}.png')"
+    "            # heatmap(kind, metric, figname=f'{kind}_{metric}.png')\n",
+    "            figpath = os.path.join(basepath, 'figures')\n",
+    "            os.makedirs(figpath, exist_ok=True)\n",
+    "            figname = os.path.join(figpath, f'heatmap_{kind}_{metric}.png')\n",
+    "            heatmap(kind, metric, figname=figname)\n",
+    "            heatmap(kind, metric, figname=None)"
    ]
   },
   {
