Added heatmaps of p_value and z_ statistics into aggregate plot

--- a/model/viz/aggregate_plots.ipynb
+++ b/model/viz/aggregate_plots.ipynb
@@ -19,7 +19,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "basepath = f'../results/unbalanced_models/'\n",
+    "nl = 2 # number of lobbyists\n",
+    "b = 500 # [30, 60, 150, 300, 500, 750, 1000]  # lobbyists budget in the simulation\n",
+    "basepath = f'../results/sensitivity_budgets/{nl}_lobbyists/{b}k_budget'\n",
     "filename = 'config.json'\n",
     "with open(os.path.join(basepath, filename), 'r') as f:\n",
     "    params = json.load(f)"
@@ -77,7 +79,14 @@
     "            values = [kind, n_lobbyists, lambda_v, phi_v, nruns, p_o, p_p]\n",
     "            \n",
     "            for metric_name in avg_metrics.keys():\n",
-    "                if metric_name != 'lobbyists_performance':\n",
+    "                if metric_name == 'average_opinions':\n",
+    "                    avg = avg_metrics[metric_name]['avg']\n",
+    "                    std = avg_metrics[metric_name]['std']\n",
+    "                    z_stat = avg_metrics[metric_name]['z_statistic']\n",
+    "                    p_val = avg_metrics[metric_name]['p_value']\n",
+    "                    columns.extend([f'avg_{metric_name}', f'std_{metric_name}', f'z_stat_{metric_name}', f'p_val_{metric_name}'])\n",
+    "                    values.extend([avg, std, z_stat, p_val])\n",
+    "                elif metric_name != 'lobbyists_performance':\n",
     "                    avg = avg_metrics[metric_name]['avg']\n",
     "                    std = avg_metrics[metric_name]['std']\n",
     "                    columns.extend([f'avg_{metric_name}', f'std_{metric_name}'])\n",
@@ -133,6 +142,8 @@
     "        sns.heatmap(heatmap_data, cmap=\"Blues\", annot=True, fmt=\".0f\")\n",
     "    elif metric.startswith('avg_lobbyists_performance') or metric == 'avg_average_pairwise_distance' or metric == 'avg_std_opinions':\n",
     "        sns.heatmap(heatmap_data, vmin = 0, cmap=\"Blues\", annot=True, fmt=\".2f\")\n",
+    "    elif metric == 'avg_effective_number_clusters':\n",
+    "        sns.heatmap(heatmap_data, vmin = 1,vmax = 3, cmap=\"Blues\", annot=True, fmt=\".2f\")\n",
     "    else:\n",
     "        sns.heatmap(heatmap_data, cmap=\"Blues\", annot=True, fmt=\".2f\")\n",
     "    plt.title(f\"Heatmap of {metric} for {kind}\")\n",
@@ -152,7 +163,7 @@
     "for kind in ['probabilities', 'weights']:\n",
     "    if kind in df['kind'].unique() :\n",
     "        for col in columns:\n",
-    "            if col.startswith('avg'):\n",
+    "            if col.startswith('avg') or col.startswith('z_stat') or col.startswith('p_val') :\n",
     "                metric = col\n",
     "                # heatmap(kind, metric, figname=f'{kind}_{metric}.png')\n",
     "                figpath = os.path.join(basepath, 'figures')\n",
