--- a/model/viz/aggregate_plots.ipynb
+++ b/model/viz/aggregate_plots.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nl = 1 # number of lobbyists\n",
+    "nl = 0 # number of lobbyists\n",
     "b = 30 # [30, 60, 150, 300, 500, 750, 1000]  # lobbyists budget in the simulation\n",
     "basepath = f'../results/sensitivity_budgets/{nl}_lobbyists/{b}k_budget'\n",
     "filename = 'config.json'\n",
@@ -82,10 +82,10 @@
     "                if metric_name == 'average_opinions':\n",
     "                    avg = avg_metrics[metric_name]['avg']\n",
     "                    std = avg_metrics[metric_name]['std']\n",
-    "                    z_stat = avg_metrics[metric_name]['z_statistic']\n",
+    "                    t_stat = avg_metrics[metric_name]['t_statistic']\n",
     "                    p_val = avg_metrics[metric_name]['p_value']\n",
-    "                    columns.extend([f'avg_{metric_name}', f'std_{metric_name}', f'z_stat_{metric_name}', f'p_val_{metric_name}'])\n",
-    "                    values.extend([avg, std, z_stat, p_val])\n",
+    "                    columns.extend([f'avg_{metric_name}', f'std_{metric_name}', f't_stat_{metric_name}', f'p_val_{metric_name}'])\n",
+    "                    values.extend([avg, std, t_stat, p_val])\n",
     "                elif metric_name != 'lobbyists_performance':\n",
     "                    avg = avg_metrics[metric_name]['avg']\n",
     "                    std = avg_metrics[metric_name]['std']\n",
@@ -163,7 +163,7 @@
     "for kind in ['probabilities', 'weights']:\n",
     "    if kind in df['kind'].unique() :\n",
     "        for col in columns:\n",
-    "            if col.startswith('avg') or col.startswith('z_stat') or col.startswith('p_val') :\n",
+    "            if col.startswith('avg') or col.startswith('t_stat') or col.startswith('p_val') :\n",
     "                metric = col\n",
     "                # heatmap(kind, metric, figname=f'{kind}_{metric}.png')\n",
     "                figpath = os.path.join(basepath, 'figures')\n",
