--- a/model/viz/aggregate_plots.ipynb
+++ b/model/viz/aggregate_plots.ipynb
@@ -19,9 +19,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nl = 0 # number of lobbyists\n",
+    "nl = 2 # number of lobbyists\n",
     "b = 30 # [30, 60, 150, 300, 500, 750, 1000]  # lobbyists budget in the simulation\n",
-    "basepath = f'../results/sensitivity_budgets/{nl}_lobbyists/{b}k_budget'\n",
+    "basepath = f'C:/Users/verdi/Desktop/results/balanced_budgets/model_updated/{nl}_lobbyists_pess_model/' #f'../results/balanced_budgets/{nl}_lobbyists_flipped/'\n",
     "filename = 'config.json'\n",
     "with open(os.path.join(basepath, filename), 'r') as f:\n",
     "    params = json.load(f)"
@@ -60,7 +60,7 @@
     "kinds = ['weights', 'probabilities']\n",
     "\n",
     "data = []\n",
-    "\n",
+    "print(os.listdir(basepath))\n",
     "for folder in os.listdir(basepath):\n",
     "    paramspath = os.path.join(basepath, folder)\n",
     "    try:\n",
@@ -124,6 +124,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import seaborn as sns\n",
     "\n",
     "def heatmap(kind, metric, figname=None):\n",
@@ -165,10 +174,10 @@
     "        for col in columns:\n",
     "            if col.startswith('avg') or col.startswith('t_stat') or col.startswith('p_val') :\n",
     "                metric = col\n",
-    "                # heatmap(kind, metric, figname=f'{kind}_{metric}.png')\n",
-    "                figpath = os.path.join(basepath, 'figures')\n",
-    "                os.makedirs(figpath, exist_ok=True)\n",
-    "                figname = os.path.join(figpath, f'heatmap_{kind}_{metric}.png')\n",
+    "                # heatmap(kind, metric, figname=f'heatmap_{kind}_{metric}.png')\n",
+    "                #figpath = os.path.join(basepath, 'figures')\n",
+    "                #os.makedirs(figpath, exist_ok=True)\n",
+    "                figname = f'heatmap_{kind}_{metric}.png'\n",
     "                heatmap(kind, metric, figname=figname)\n",
     "                heatmap(kind, metric, figname=None)"
    ]
