Update wieghts calculations for numerical stability in lupdate and update fncs of Almondo model class. Set the optimistic model

--- a/model/viz/aggregate_plots.ipynb
+++ b/model/viz/aggregate_plots.ipynb
@@ -166,9 +166,9 @@
     "            if col.startswith('avg') or col.startswith('t_stat') or col.startswith('p_val') :\n",
     "                metric = col\n",
     "                # heatmap(kind, metric, figname=f'{kind}_{metric}.png')\n",
-    "                figpath = os.path.join(basepath, 'figures')\n",
-    "                os.makedirs(figpath, exist_ok=True)\n",
-    "                figname = os.path.join(figpath, f'heatmap_{kind}_{metric}.png')\n",
+    "                # figpath = os.path.join(basepath, 'figures')\n",
+    "                # os.makedirs(figpath, exist_ok=True)\n",
+    "                figname = 'heatmap_{kind}_{metric}.png'\n",
     "                heatmap(kind, metric, figname=figname)\n",
     "                heatmap(kind, metric, figname=None)"
    ]
